; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/sw/rxe/extr_rxe_pool.c_rxe_cache_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/sw/rxe/extr_rxe_pool.c_rxe_cache_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rxe_type_info = type { i32, i32, i32, i32 }

@RXE_NUM_TYPES = common dso_local global i32 0, align 4
@rxe_type_info = common dso_local global %struct.rxe_type_info* null, align 8
@RXE_POOL_ALIGN = common dso_local global i32 0, align 4
@RXE_POOL_NO_ALLOC = common dso_local global i32 0, align 4
@RXE_POOL_CACHE_FLAGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Unable to init kmem cache for %s\0A\00", align 1
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rxe_cache_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.rxe_type_info*, align 8
  store i32 0, i32* %3, align 4
  br label %6

6:                                                ; preds = %49, %0
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @RXE_NUM_TYPES, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %52

10:                                               ; preds = %6
  %11 = load %struct.rxe_type_info*, %struct.rxe_type_info** @rxe_type_info, align 8
  %12 = load i32, i32* %3, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.rxe_type_info, %struct.rxe_type_info* %11, i64 %13
  store %struct.rxe_type_info* %14, %struct.rxe_type_info** %5, align 8
  %15 = load %struct.rxe_type_info*, %struct.rxe_type_info** %5, align 8
  %16 = getelementptr inbounds %struct.rxe_type_info, %struct.rxe_type_info* %15, i32 0, i32 3
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @RXE_POOL_ALIGN, align 4
  %19 = call i64 @ALIGN(i32 %17, i32 %18)
  store i64 %19, i64* %4, align 8
  %20 = load %struct.rxe_type_info*, %struct.rxe_type_info** %5, align 8
  %21 = getelementptr inbounds %struct.rxe_type_info, %struct.rxe_type_info* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @RXE_POOL_NO_ALLOC, align 4
  %24 = and i32 %22, %23
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %48, label %26

26:                                               ; preds = %10
  %27 = load %struct.rxe_type_info*, %struct.rxe_type_info** %5, align 8
  %28 = getelementptr inbounds %struct.rxe_type_info, %struct.rxe_type_info* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load i64, i64* %4, align 8
  %31 = load i32, i32* @RXE_POOL_ALIGN, align 4
  %32 = load i32, i32* @RXE_POOL_CACHE_FLAGS, align 4
  %33 = call i32 @kmem_cache_create(i32 %29, i64 %30, i32 %31, i32 %32, i32* null)
  %34 = load %struct.rxe_type_info*, %struct.rxe_type_info** %5, align 8
  %35 = getelementptr inbounds %struct.rxe_type_info, %struct.rxe_type_info* %34, i32 0, i32 2
  store i32 %33, i32* %35, align 4
  %36 = load %struct.rxe_type_info*, %struct.rxe_type_info** %5, align 8
  %37 = getelementptr inbounds %struct.rxe_type_info, %struct.rxe_type_info* %36, i32 0, i32 2
  %38 = load i32, i32* %37, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %47, label %40

40:                                               ; preds = %26
  %41 = load %struct.rxe_type_info*, %struct.rxe_type_info** %5, align 8
  %42 = getelementptr inbounds %struct.rxe_type_info, %struct.rxe_type_info* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @pr_err(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %43)
  %45 = load i32, i32* @ENOMEM, align 4
  %46 = sub nsw i32 0, %45
  store i32 %46, i32* %2, align 4
  br label %53

47:                                               ; preds = %26
  br label %48

48:                                               ; preds = %47, %10
  br label %49

49:                                               ; preds = %48
  %50 = load i32, i32* %3, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %3, align 4
  br label %6

52:                                               ; preds = %6
  store i32 0, i32* %1, align 4
  br label %57

53:                                               ; preds = %40
  %54 = load i32, i32* %3, align 4
  %55 = call i32 @rxe_cache_clean(i32 %54)
  %56 = load i32, i32* %2, align 4
  store i32 %56, i32* %1, align 4
  br label %57

57:                                               ; preds = %53, %52
  %58 = load i32, i32* %1, align 4
  ret i32 %58
}

declare dso_local i64 @ALIGN(i32, i32) #1

declare dso_local i32 @kmem_cache_create(i32, i64, i32, i32, i32*) #1

declare dso_local i32 @pr_err(i8*, i32) #1

declare dso_local i32 @rxe_cache_clean(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
